--- a/src/scss/layout/sections/_section-offers.scss
+++ b/src/scss/layout/sections/_section-offers.scss
@@ -11,7 +11,6 @@
 
 .card_offers {
   width: 32%;
-  max-width: 421px;
   flex-grow: 1;
 
   a {
